<resources>
    <string name="app_name">TaskBeats</string>
    <string name="home_title">Task Beat</string>
    <string name="create_task_title">Create Task</string>
    <string name="create">Create</string>
    <string name="update_task_title">Update task</string>
    <string name="update">Update</string>
    <string name="category_delete_title">WARNING!</string>
    <string name="category_delete_description">Are you sure you want to delete this category?</string>
    <string name="delete">delete</string>
    <string name="empty_category_title">No category found!</string>
    <string name="empty_category_description">Please create a new one.</string>
</resources>